// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`would boil if above 100 1`] = `
<p>
  The water would boil.
</p>
`;

exports[`would boil if at 100 1`] = `
<p>
  The water would boil.
</p>
`;

exports[`would not boil if NaN 1`] = `
<p>
  The water would not boil.
</p>
`;

exports[`would not boil if below 20 1`] = `
<p>
  The water would not boil.
</p>
`;

exports[`would not boil if negative -1000 1`] = `
<p>
  The water would not boil.
</p>
`;

exports[`would not boil if no input 1`] = `
<p>
  The water would not boil.
</p>
`;
